// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contentCard > renders correctly with all directions > renders correctly direction column 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  text-align: left;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  background: #ffffff;
  overflow-wrap: break-word;
}

.emotion-0[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled]:hover {
  border: 1px solid #d9dadd;
  box-shadow: none;
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  padding: 1.5rem 1.5rem 0 1.5rem;
  padding: 1.5rem;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      target="_blank"
    >
      <div
        class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u6p"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction column and image 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  text-align: left;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  background: #ffffff;
  overflow-wrap: break-word;
}

.emotion-0[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled]:hover {
  border: 1px solid #d9dadd;
  box-shadow: none;
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  object-fit: cover;
  border-radius: 0.25rem 0.25rem 0 0;
}

.emotion-4[data-disabled] {
  -webkit-filter: grayscale(1);
  filter: grayscale(1);
}

.emotion-6 {
  padding: 1.5rem 1.5rem 0 1.5rem;
  padding: 1.5rem;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      target="_blank"
    >
      <div
        class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
      >
        <img
          alt=""
          class="emotion-4 emotion-5"
          height="120"
          src="/src/components/ContentCard/assets/illustration.png"
        />
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="emotion-6 emotion-7 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u6p"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction column and loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.emotion-0 {
  display: block;
  text-align: left;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  background: #ffffff;
  overflow-wrap: break-word;
}

.emotion-0[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled]:hover {
  border: 1px solid #d9dadd;
  box-shadow: none;
}

.emotion-3 {
  position: relative;
  width: 100%;
  overflow: hidden;
  cursor: progress;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  height: 100%;
  border-radius: 0.25rem 0.25rem 0 0;
  height: 120px;
}

.emotion-5 {
  height: 100%;
  width: 100%;
  max-width: 100%;
  background-color: #e9eaeb;
}

.emotion-7 {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .emotion-7 {
    -webkit-animation: unset;
    animation: unset;
  }
}

.emotion-9 {
  padding: 1.5rem;
}

.emotion-11 {
  position: relative;
  width: 100%;
  overflow: hidden;
  cursor: progress;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  height: 100%;
}

.emotion-13 {
  height: 0.75rem;
  width: 7.5rem;
  max-width: 100%;
  border-radius: 0.5rem;
  background-color: #e9eaeb;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      target="_blank"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="emotion-2 emotion-3 emotion-4"
        >
          <div
            class="emotion-5 emotion-6"
          />
          <div
            class="emotion-7 emotion-8"
          />
        </div>
        <div
          class="emotion-9 emotion-10 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
        >
          <div
            aria-busy="true"
            aria-live="polite"
            class="emotion-11 emotion-4"
          >
            <div
              class="emotion-13 emotion-14"
            />
            <div
              class="emotion-7 emotion-8"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="emotion-11 emotion-4"
          >
            <div
              class="emotion-13 emotion-14"
            />
            <div
              class="emotion-7 emotion-8"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="emotion-11 emotion-4"
          >
            <div
              class="emotion-13 emotion-14"
            />
            <div
              class="emotion-7 emotion-8"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="emotion-11 emotion-4"
          >
            <div
              class="emotion-13 emotion-14"
            />
            <div
              class="emotion-7 emotion-8"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="emotion-11 emotion-4"
          >
            <div
              class="emotion-13 emotion-14"
            />
            <div
              class="emotion-7 emotion-8"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction row 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  text-align: left;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  background: #ffffff;
  overflow-wrap: break-word;
}

.emotion-0[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled]:hover {
  border: 1px solid #d9dadd;
  box-shadow: none;
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  padding: 1.5rem 0 1.5rem 1.5rem;
  padding: 1.5rem;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      target="_blank"
    >
      <div
        class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52ud uv_toi52u5d"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u6p"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction row and image 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  text-align: left;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  background: #ffffff;
  overflow-wrap: break-word;
}

.emotion-0[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled]:hover {
  border: 1px solid #d9dadd;
  box-shadow: none;
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  object-fit: cover;
  border-radius: 0.25rem 0 0 0.25rem;
}

max-height:0px .emotion-4[data-disabled] {
  -webkit-filter: grayscale(1);
  filter: grayscale(1);
}

.emotion-6 {
  padding: 1.5rem 0 1.5rem 1.5rem;
  padding: 1.5rem;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      target="_blank"
    >
      <div
        class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
      >
        <img
          alt=""
          class="emotion-4 emotion-5"
          src="/src/components/ContentCard/assets/illustration.png"
          width="220"
        />
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52ud uv_toi52u5d"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="emotion-6 emotion-7 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u6p"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction row and loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.emotion-0 {
  display: block;
  text-align: left;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  background: #ffffff;
  overflow-wrap: break-word;
}

.emotion-0[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled]:hover {
  border: 1px solid #d9dadd;
  box-shadow: none;
}

.emotion-3 {
  position: relative;
  width: 100%;
  overflow: hidden;
  cursor: progress;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  height: 100%;
  border-radius: 0.25rem 0 0 0.25rem;
  width: 220px;
  height: unset;
}

.emotion-5 {
  height: 100%;
  width: 100%;
  max-width: 100%;
  background-color: #e9eaeb;
}

.emotion-7 {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .emotion-7 {
    -webkit-animation: unset;
    animation: unset;
  }
}

.emotion-9 {
  padding: 1.5rem;
}

.emotion-11 {
  position: relative;
  width: 100%;
  overflow: hidden;
  cursor: progress;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  height: 100%;
}

.emotion-13 {
  height: 0.75rem;
  width: 7.5rem;
  max-width: 100%;
  border-radius: 0.5rem;
  background-color: #e9eaeb;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      target="_blank"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="emotion-2 emotion-3 emotion-4"
        >
          <div
            class="emotion-5 emotion-6"
          />
          <div
            class="emotion-7 emotion-8"
          />
        </div>
        <div
          class="emotion-9 emotion-10 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
        >
          <div
            aria-busy="true"
            aria-live="polite"
            class="emotion-11 emotion-4"
          >
            <div
              class="emotion-13 emotion-14"
            />
            <div
              class="emotion-7 emotion-8"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="emotion-11 emotion-4"
          >
            <div
              class="emotion-13 emotion-14"
            />
            <div
              class="emotion-7 emotion-8"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="emotion-11 emotion-4"
          >
            <div
              class="emotion-13 emotion-14"
            />
            <div
              class="emotion-7 emotion-8"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="emotion-11 emotion-4"
          >
            <div
              class="emotion-13 emotion-14"
            />
            <div
              class="emotion-7 emotion-8"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="emotion-11 emotion-4"
          >
            <div
              class="emotion-13 emotion-14"
            />
            <div
              class="emotion-7 emotion-8"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with children 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  text-align: left;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  background: #ffffff;
  overflow-wrap: break-word;
}

.emotion-0[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled]:hover {
  border: 1px solid #d9dadd;
  box-shadow: none;
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  padding: 1.5rem 1.5rem 0 1.5rem;
  padding: 1.5rem;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      target="_blank"
    >
      <div
        class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u6p"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    test
                  </h3>
                </div>
              </div>
              <div
                class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
              >
                This is the children of the component
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  text-align: left;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  background: #ffffff;
  overflow-wrap: break-word;
}

.emotion-0[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled]:hover {
  border: 1px solid #d9dadd;
  box-shadow: none;
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  padding: 1.5rem 1.5rem 0 1.5rem;
  padding: 1.5rem;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      disabled=""
      target="_blank"
    >
      <div
        class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u6p"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1a uv_m4c9ow30"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with empty string title 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  text-align: left;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  background: #ffffff;
  overflow-wrap: break-word;
}

.emotion-0[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled]:hover {
  border: 1px solid #d9dadd;
  box-shadow: none;
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  padding: 1.5rem 1.5rem 0 1.5rem;
  padding: 1.5rem;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      target="_blank"
    >
      <div
        class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u6p"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with href 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  text-align: left;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  background: #ffffff;
  overflow-wrap: break-word;
}

.emotion-0:hover {
  border: 1px solid #792dd4;
  box-shadow: 0px 0px 8px 2px #d9dadd66;
  cursor: pointer;
}

.emotion-0[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled]:hover {
  border: 1px solid #d9dadd;
  box-shadow: none;
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  padding: 1.5rem 1.5rem 0 1.5rem;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.emotion-6 {
  padding: 0 1.5rem 1.5rem 1.5rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background: #f9f9fa;
  padding: 0.5rem;
  border-radius: 0.25rem;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      href="https://scaleway.com"
      target="_blank"
    >
      <div
        class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u6p"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-6 emotion-7 uv_toi52u0 uv_toi52u41 uv_toi52u2d uv_toi52u7d uv_toi52u5j"
            style="--uv_4k0ekn3: 1;"
          >
            <div
              class="emotion-8 emotion-9"
            >
              <svg
                class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_sentiment_neutral__1sbwqkz3 styles_size_small__1sbwqkza styles_undefined_compound_34__1sbwqkz1i"
                viewBox="0 0 16 16"
              >
                <path
                  d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
                />
                <path
                  d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with href and direction row 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  text-align: left;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  background: #ffffff;
  overflow-wrap: break-word;
}

.emotion-0:hover {
  border: 1px solid #792dd4;
  box-shadow: 0px 0px 8px 2px #d9dadd66;
  cursor: pointer;
}

.emotion-0[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled]:hover {
  border: 1px solid #d9dadd;
  box-shadow: none;
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  padding: 1.5rem 0 1.5rem 1.5rem;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.emotion-6 {
  padding: 1.5rem 1.5rem 1.5rem 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background: #f9f9fa;
  padding: 0.5rem;
  border-radius: 0.25rem;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      href="https://scaleway.com"
      target="_blank"
    >
      <div
        class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52ud uv_toi52u5d"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u6p"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-6 emotion-7 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52u5v"
            style="--uv_4k0ekn3: 1;"
          >
            <div
              class="emotion-8 emotion-9"
            >
              <svg
                class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_sentiment_neutral__1sbwqkz3 styles_size_small__1sbwqkza styles_undefined_compound_34__1sbwqkz1i"
                viewBox="0 0 16 16"
              >
                <path
                  d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
                />
                <path
                  d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with href and target 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  text-align: left;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  background: #ffffff;
  overflow-wrap: break-word;
}

.emotion-0:hover {
  border: 1px solid #792dd4;
  box-shadow: 0px 0px 8px 2px #d9dadd66;
  cursor: pointer;
}

.emotion-0[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled]:hover {
  border: 1px solid #d9dadd;
  box-shadow: none;
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  padding: 1.5rem 1.5rem 0 1.5rem;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.emotion-6 {
  padding: 0 1.5rem 1.5rem 1.5rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background: #f9f9fa;
  padding: 0.5rem;
  border-radius: 0.25rem;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      href="https://scaleway.com"
      target="_blank"
    >
      <div
        class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u6p"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-6 emotion-7 uv_toi52u0 uv_toi52u41 uv_toi52u2d uv_toi52u7d uv_toi52u5j"
            style="--uv_4k0ekn3: 1;"
          >
            <div
              class="emotion-8 emotion-9"
            >
              <svg
                class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_sentiment_neutral__1sbwqkz3 styles_size_small__1sbwqkza styles_undefined_compound_34__1sbwqkz1i"
                viewBox="0 0 16 16"
              >
                <path
                  d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
                />
                <path
                  d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with image, title, description, subtitle and icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  text-align: left;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  background: #ffffff;
  overflow-wrap: break-word;
}

.emotion-0[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled]:hover {
  border: 1px solid #d9dadd;
  box-shadow: none;
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  object-fit: cover;
  border-radius: 0.25rem 0.25rem 0 0;
}

.emotion-4[data-disabled] {
  -webkit-filter: grayscale(1);
  filter: grayscale(1);
}

.emotion-6 {
  padding: 1.5rem 1.5rem 0 1.5rem;
  padding: 1.5rem;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      target="_blank"
    >
      <div
        class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
      >
        <img
          alt=""
          class="emotion-4 emotion-5"
          height="120"
          src="/src/components/ContentCard/assets/illustration.png"
        />
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="emotion-6 emotion-7 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            /src/components/ContentCard/assets/illustration.png
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u6p"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
                >
                  <small
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9ows uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
                  >
                    sub title test
                  </small>
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    test
                  </h3>
                </div>
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  this is a description
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with onClick 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  text-align: left;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  background: #ffffff;
  overflow-wrap: break-word;
}

.emotion-0:hover {
  border: 1px solid #792dd4;
  box-shadow: 0px 0px 8px 2px #d9dadd66;
  cursor: pointer;
}

.emotion-0[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled]:hover {
  border: 1px solid #d9dadd;
  box-shadow: none;
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  padding: 1.5rem 1.5rem 0 1.5rem;
  padding: 1.5rem;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<div
    data-testid="testing"
  >
    <button
      class="emotion-0 emotion-1"
      role="button"
      target="_blank"
    >
      <div
        class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u6p"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with required title 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  text-align: left;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  background: #ffffff;
  overflow-wrap: break-word;
}

.emotion-0[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled]:hover {
  border: 1px solid #d9dadd;
  box-shadow: none;
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  padding: 1.5rem 1.5rem 0 1.5rem;
  padding: 1.5rem;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      target="_blank"
    >
      <div
        class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u6p"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with title with custom tag 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  text-align: left;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  background: #ffffff;
  overflow-wrap: break-word;
}

.emotion-0[disabled] {
  cursor: not-allowed;
}

.emotion-0[disabled]:hover {
  border: 1px solid #d9dadd;
  box-shadow: none;
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  padding: 1.5rem 1.5rem 0 1.5rem;
  padding: 1.5rem;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      target="_blank"
    >
      <div
        class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="emotion-4 emotion-5 uv_toi52u0 uv_toi52u3d uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u6p"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u5d"
                >
                  <h1
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    test
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
